// Copyright (c) Mainflux
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package mainflux.users.policies;

option go_package = "./policies";

// AuthService is a service that provides authentication and authorization
// functionalities for the users service.
service AuthService {
    rpc Identify(IdentifyReq) returns (IdentifyRes) {}
    // Authorize authorizes the given subject to perform the given action on the
    // given object.
    rpc Authorize(AuthorizeReq) returns (AuthorizeRes) {}
}

message AuthorizeReq {
    string subject    = 1;
    string object     = 2;
    string action     = 3;
    string entityType = 4;
}

message AuthorizeRes {
    bool authorized = 1;
}

message IssueReq {
    string identity = 1;
    string secret   = 2;
}

message IssueRes {
    string token = 1;
}

message IdentifyReq {
    string token = 1;
}

message IdentifyRes {
    string id = 1;
}

message AddPolicyReq {
    string token           = 1;
    string subject         = 2;
    string object          = 3;
    repeated string action = 4;
}

message AddPolicyRes {
    bool added = 1;
}

message DeletePolicyReq {
    string token   = 1;
    string subject = 2;
    string object  = 3;
}

message DeletePolicyRes {
    bool deleted = 1;
}
